Bug 108997 - kill from admin-console doesn't work
Summary: kill from admin-console doesn't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Aditya Dewan
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: LOOL-Admin-Console
  Show dependency treegraph
 
Reported: 2017-07-07 10:28 UTC by Pranav Kant
Modified: 2019-02-03 05:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pranav Kant 2017-07-07 10:28:06 UTC
I remember it used to work, but it doesn't work in current master.
Comment 1 Pranav Kant 2017-07-07 10:28:33 UTC
Aditya,

Is it possible that one of your recent change to admin console broke this ?
Comment 2 Aron Budea 2017-07-11 06:38:06 UTC
Is it the Shutdown button in Settings? Works for me in a build from yesterday when run via make run.
Comment 3 Pranav Kant 2017-07-11 06:59:27 UTC
no, i am talking about right click on document and then kill from the context menu poppped up
Comment 4 Commit Notification 2017-07-25 05:59:41 UTC
Aditya Dewan committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/online/commit/?id=7d2bbbee284f3bdebcde06cb82e0912797d9e9ed

tdf#108997 'kill document' from admin console now works.