bug fixes

- tdf#108997 'kill document' from admin console now works.
- rectified erroneous condition for selection of editor

Change-Id: I8521f0e50e8e037755d34ca2cea99abc002405ae