kit/Kit.cpp
@@ -1190,9 +1190,9 @@ private:
                 fastestUser = sessionId;
             }
         }
-        // 0 for preventing selection of the first always
-        // 1 for preventing the new users from directly beoming the editors
-        if (_editorId != fastestUser && (maxSpeed != 0 || maxSpeed != 1)) {
+        // 0 for preventing selection of the first user always
+        // 1 for preventing the new users from directly becoming the editors
+        if (_editorId != fastestUser && !(maxSpeed == 0 || maxSpeed == 1)) {
             if (!_editorChangeWarning && _editorId != -1)
             {
                 _editorChangeWarning = true;
